--- a/style.css
+++ b/style.css
@@ -45,3 +45,40 @@ body {
   color: #0eee99;
   font-size: 20px;
 }
+
+a {
+  text-decoration: none;
+  color: #6b0090;
+}
+a:hover {
+  color: red;
+}
+a:active {
+  color: green;
+}
+a:visited {
+  color: #f51e7a;
+}
+.list {
+  border: 3px #0d99ff solid;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.list h1 {
+  color: #fdfa02;
+  text-align: center;
+}
+
+.list ul {
+  list-style: square;
+  color: white;
+  padding: 5%;
+  font-size: 19px;
+}
+
+.list li {
+  padding-bottom: 3px;
+  border-bottom: solid 2px #0d99ff;
+  /* list-style-image: ;*/
+}
