--- a/style.css
+++ b/style.css
@@ -22,6 +22,15 @@ body {
   color: white;
 }
 
+.clr {
+  clear: both;
+}
+
+.fix {
+  position: relative;
+  left: 60px;
+  bottom: 100px;
+}
 .box-1 {
   background-color: #121212;
   color: #e44d26;
@@ -121,7 +130,7 @@ a:active {
   padding: 8px;
   width: 60%;
 }
-/* its apply even after global v*/
+/* its apply even after global v */
 /* .my-form input[type="submit"] {
   width: 10%;
   background-color: #00bdfd;
@@ -132,4 +141,78 @@ a:active {
   padding: 10px;
   position: relative;
   left: 1%;
-}*\
+}
+ */
+
+.block {
+  color: white;
+  float: left;
+  width: 33.3%;
+  padding: 1%;
+  border: 1px solid blue;
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+
+#main-block {
+  float: left;
+  width: 70%;
+  color: white;
+  padding: 26px;
+  box-sizing: border-box;
+  border: solid 2px green;
+}
+
+#main-block h3 {
+  text-transform: uppercase;
+}
+
+#sidebar {
+  float: left;
+  width: 30%;
+  color: white;
+  background-color: #555f70;
+  border: 3px solid green;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+.p-box {
+  color: white;
+  width: 800px;
+  height: 500px;
+  border: 1px solid #b446e0;
+  margin-top: 20px;
+  position: relative;
+  background-image: url("img/arch_btw.jpg");
+  background-position: center top;
+  background-repeat: no-repeat;
+}
+
+.p-box h1 {
+  position: absolute;
+  top: 10%;
+  left: 35%;
+}
+
+.p-box h2 {
+  position: relative;
+  top: 80%;
+  left: 44%;
+}
+
+.new li:first-child {
+  background: blue;
+}
+
+.new li:last-child {
+  background: red;
+}
+
+.new li:nth-child(8) {
+  background-color: green;
+}
+
+/*.new li:nth-child(even) {
+  background: #95c379;
+}*/
